--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,16 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KMA_Practice"
-        tools:targetApi="31" >
+        tools:targetApi="31">
 <!--        <activity-->
-<!--            android:name=".bai3.Bai3"-->
+<!--            android:name=".bai4.Bai4Activity"-->
 <!--            android:exported="false" />-->
+        <!-- <activity -->
+        <!-- android:name=".bai3.Bai3" -->
+        <!-- android:exported="false" /> -->
         <!-- <activity -->
         <!-- android:name=".Bai2" -->
         <!-- android:exported="false" /> -->
         <activity
-            android:name=".bai3.Bai3"
-            android:exported="true" >
+            android:name=".bai4.Bai4Activity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
