--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,20 +18,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KMA_Practice"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".bai6.Bai6Activity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".bai5.Bai5Activity"
-            android:exported="false" />
-        <!-- <activity -->
+            android:exported="false" /> <!-- <activity -->
         <!-- android:name=".bai4.Bai4Activity" -->
         <!-- android:exported="false" /> -->
-        <!-- <activity -->
-        <!-- android:name=".bai3.Bai3" -->
-        <!-- android:exported="false" /> -->
-<!--         <activity -->
-<!--         android:name=".Bai2" -->
-<!--         android:exported="false" /> -->
         <activity
-            android:name=".Bai2"
+            android:name=".bai3.Bai3"
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".Bai2" -->
+        <!-- android:exported="false" /> -->
+        <activity
+            android:name=".bai6.Bai6Activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
