--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,10 +18,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KMA_Practice"
         tools:targetApi="31">
+        <receiver
+            android:name=".bai9.MyReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.AIRPLANE_MODE"/>
+            </intent-filter>
+        </receiver>
+        <!-- <activity -->
+        <!-- android:name=".bai9.Bai9Activity" -->
+        <!-- android:exported="false" /> -->
         <service
             android:name=".bai8.PlaySongService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".bai8.SongActivity"
@@ -35,13 +46,13 @@
             android:exported="false" /> <!-- <activity -->
         <!-- android:name=".bai4.Bai4Activity" -->
         <!-- android:exported="false" /> -->
-<!--        <activity-->
-<!--            android:name=".bai3.Bai3"-->
-<!--            android:exported="false" /> &lt;!&ndash; <activity &ndash;&gt;-->
+        <!-- <activity -->
+        <!-- android:name=".bai3.Bai3" -->
+        <!-- android:exported="false" /> &lt;!&ndash; <activity &ndash;&gt; -->
         <!-- android:name=".Bai2" -->
         <!-- android:exported="false" /> -->
         <activity
-            android:name=".bai3.Bai3"
+            android:name=".bai9.Bai9Activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
