--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KMA_Practice"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".bai11.Bai11Activity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".bai10.Bai10Activity"
             android:exported="false" />
@@ -63,7 +66,7 @@
         <!-- android:name=".Bai2" -->
         <!-- android:exported="false" /> -->
         <activity
-            android:name=".bai4.Bai4Activity"
+            android:name=".bai11.Bai11Activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
