--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
 
     <application
         android:allowBackup="true"
@@ -19,8 +21,11 @@
         android:theme="@style/Theme.KMA_Practice"
         tools:targetApi="31">
 <!--        <activity-->
-<!--            android:name=".bai11.Bai11Activity"-->
+<!--            android:name=".bai12.Bai12Activity"-->
 <!--            android:exported="false" />-->
+        <!-- <activity -->
+        <!-- android:name=".bai11.Bai11Activity" -->
+        <!-- android:exported="false" /> -->
         <activity
             android:name=".bai10.Bai10Activity"
             android:exported="false" />
@@ -66,7 +71,7 @@
         <!-- android:name=".Bai2" -->
         <!-- android:exported="false" /> -->
         <activity
-            android:name=".bai11.Bai11Activity"
+            android:name=".bai12.Bai12Activity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
